<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.stephen.mccannfitzgerald.MainActivity">


    <TextView
        android:text="@string/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAllCaps="true"
        android:textColor="#3079ab"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <Button
        android:text="@string/about_us"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_below="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_marginTop="33dp"
        android:id="@+id/button2" />

    <Button
        android:text="@string/business_development"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginTop="57dp"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:text="@string/it_support"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:id="@+id/button3"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/button" />
</RelativeLayout>
