<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_itsupport"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.stephen.mccannfitzgerald.ITSupport">

    <TextView
        android:text="@string/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="15dp"/>

    <TextView
        android:text="@string/textviewTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:textSize="20dp"
        android:id="@+id/textViewTo" />

    <TextView
        android:text="@string/textviewSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTo"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:textSize="20dp"
        android:id="@+id/textViewSubject" />

    <EditText
        android:id="@+id/editTextTo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/textViewTo"
        android:layout_centerHorizontal="true">
    </EditText>

    <EditText
        android:id="@+id/editTextSubject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/textViewSubject"
        android:layout_alignParentStart="true">
    </EditText>

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Message : "
        android:textSize="20dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextSubject" />

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="700dp"
        android:layout_height="70dp"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="5"
        android:layout_below="@+id/textViewMessage"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
